--- a/personalportfolio.css
+++ b/personalportfolio.css
@@ -2,6 +2,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  list-style: none;
 }
 
 nav {
@@ -24,16 +25,39 @@ nav {
   justify-content: space-around;
   width: 50%;
 }
-.nav-links li {
-  list-style: none;
+.nav-links li{
+  position: relative;
 }
+
 .nav-links a {
   color: rgb(226, 226, 226);
   text-decoration: none;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   font-weight: bold;
   font-size: 14px;
+  padding-bottom: 3px;
 }
+
+
+.nav-links a::after{
+  position: absolute;
+  content: '';
+  background-color: white;
+  left: 0px;
+  bottom: 0px;
+  height: 3px;
+  width: 100%;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s linear;
+  }
+
+  .nav-links a:hover::after{
+    transform: scaleX(1);
+    transform-origin: left;
+  }
+
+
 .burger {
   display: none;
   cursor: pointer;
@@ -47,7 +71,7 @@ nav {
 }
 @media screen and (max-width: 1024px) {
   .nav-links {
-    width: 80%;
+    width: 75%;
   }
 }
 
@@ -57,7 +81,7 @@ nav {
   }
   .nav-links {
     position: absolute;
-    right: 0px;
+    left: 0px;
     height: 92vh;
     top: 8vh;
     background-color: #5d4954;
@@ -65,7 +89,7 @@ nav {
     flex-direction: column;
     align-items: center;
     width: 50%;
-    transform: translateX(100%);
+    transform: translateX(-100%);
     transition: transform 0.5s ease-in;
   }
   .nav-links li {
@@ -77,4 +101,24 @@ nav {
 }
 .nav-active {
   transform: translateX(0%);
+}
+
+@keyframes navLinkFade{
+  0%{
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+.toggle .line1{
+  transform: rotate(-45deg translate(-5px,6px));
+}
+.toggle .line2{
+  opacity: 0;
+}
+.toggle .line3{
+  transform: rotate(45deg translate(-5px,-6px));
 }
