--- a/personalportfolio.css
+++ b/personalportfolio.css
@@ -64,10 +64,11 @@ nav {
 }
 
 .burger div {
-  width: 25px;
+  width: 22px;
   height: 3px;
   background-color: rgb(226, 226, 226);
   margin: 3px;
+  transition: all 0.2s ease;
 }
 @media screen and (max-width: 1024px) {
   .nav-links {
@@ -88,7 +89,7 @@ nav {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 50%;
+    width: 70%;
     transform: translateX(-100%);
     transition: transform 0.5s ease-in;
   }
@@ -106,7 +107,7 @@ nav {
 @keyframes navLinkFade{
   0%{
     opacity: 0;
-    transform: translateX(50px);
+    transform: translateX(-50px);
   }
   100%{
     opacity: 1;
@@ -114,11 +115,11 @@ nav {
   }
 }
 .toggle .line1{
-  transform: rotate(-45deg translate(-5px,6px));
+  transform: rotate(-45deg) translate(-5px,4px);
 }
 .toggle .line2{
   opacity: 0;
 }
 .toggle .line3{
-  transform: rotate(45deg translate(-5px,-6px));
+  transform: rotate(45deg) translate(-5px,-5px);
 }
