--- a/personalportfolio.css
+++ b/personalportfolio.css
@@ -5,6 +5,11 @@
   list-style: none;
 }
 
+header{
+  
+  z-index: 997;
+}
+
 nav {
   display: flex;
   justify-content: space-around;
@@ -12,6 +17,7 @@ nav {
   min-height: 8vh;
   background-color: #5d4954;
   font-family: "Poppins", sans-serif;
+  
 }
 
 .logo {
@@ -24,6 +30,9 @@ nav {
   display: flex;
   justify-content: space-around;
   width: 50%;
+  align-items: center;
+  padding-top: 12px;
+  
 }
 .nav-links li{
   position: relative;
@@ -35,7 +44,9 @@ nav {
   letter-spacing: 2px;
   font-weight: bold;
   font-size: 14px;
-  padding-bottom: 3px;
+  padding-bottom: 7px;
+  display: flex;
+  text-align: center;
 }
 
 
@@ -122,4 +133,17 @@ nav {
 }
 .toggle .line3{
   transform: rotate(45deg) translate(-5px,-5px);
+}
+
+
+
+
+
+
+#hero{
+  width: 100%;
+  height: 100vh;
+  background-image: url(Animated-ladders-turquoise-background-header.jpg);
+  background-size: cover;
+  margin-top: 8vh;
 }
