--- a/personalportfolio.css
+++ b/personalportfolio.css
@@ -15,9 +15,9 @@ nav {
   justify-content: space-around;
   align-items: center;
   min-height: 8vh;
-  background-color: #5d4954;
+  background-color: rgb(49, 49, 49);
   font-family: "Poppins", sans-serif;
-  
+  box-shadow: 10px 10px 10px black;
 }
 
 .logo {
@@ -50,10 +50,10 @@ nav {
 }
 
 
-.nav-links a::after{
+.nav-links a::before{
   position: absolute;
   content: '';
-  background-color: white;
+  background-color:rgb(255,183,49);
   left: 0px;
   bottom: 0px;
   height: 3px;
@@ -63,7 +63,7 @@ nav {
   transition: transform 0.4s linear;
   }
 
-  .nav-links a:hover::after{
+  .nav-links a:hover::before{
     transform: scaleX(1);
     transform-origin: left;
   }
@@ -93,15 +93,15 @@ nav {
   }
   .nav-links {
     position: absolute;
-    left: 0px;
+    right: 0px;
     height: 92vh;
     top: 8vh;
-    background-color: #5d4954;
+    background-color: rgb(49, 49, 49);
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 70%;
-    transform: translateX(-100%);
+    transform: translateX(100%);
     transition: transform 0.5s ease-in;
   }
   .nav-links li {
@@ -142,8 +142,29 @@ nav {
 
 #hero{
   width: 100%;
-  height: 100vh;
-  background-image: url(Animated-ladders-turquoise-background-header.jpg);
-  background-size: cover;
-  margin-top: 8vh;
+  height: 92vh;
+  background-image: linear-gradient(90deg,rgb(255,183,49) 63%, rgb(40,45,41)37%);
+  margin-top: 8vh;  
+}
+
+#hero .container img{
+  height:90%;
+  width: 30vw;
+  position: relative;
+  
+  
+  
+}
+
+.
+
+
+#hero .container{
+  display: flex;
+  align-items: center;
+}
+#main{
+  display: flex;
+  align-content: center;
+  align-items: center;
 }
