--- a/personalportfolio.css
+++ b/personalportfolio.css
@@ -5,8 +5,7 @@
   list-style: none;
 }
 
-header{
-  
+header {
   z-index: 997;
 }
 
@@ -32,9 +31,8 @@ nav {
   width: 50%;
   align-items: center;
   padding-top: 12px;
-  
 }
-.nav-links li{
+.nav-links li {
   position: relative;
 }
 
@@ -49,11 +47,10 @@ nav {
   text-align: center;
 }
 
-
-.nav-links a::before{
+.nav-links a::before {
   position: absolute;
-  content: '';
-  background-color:rgb(255,183,49);
+  content: "";
+  background-color: rgb(255, 183, 49);
   left: 0px;
   bottom: 0px;
   height: 3px;
@@ -61,13 +58,12 @@ nav {
   transform: scaleX(0);
   transform-origin: right;
   transition: transform 0.4s linear;
-  }
+}
 
-  .nav-links a:hover::before{
-    transform: scaleX(1);
-    transform-origin: left;
-  }
-
+.nav-links a:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
 
 .burger {
   display: none;
@@ -115,56 +111,59 @@ nav {
   transform: translateX(0%);
 }
 
-@keyframes navLinkFade{
-  0%{
+@keyframes navLinkFade {
+  0% {
     opacity: 0;
     transform: translateX(-50px);
   }
-  100%{
+  100% {
     opacity: 1;
     transform: translateX(0);
   }
 }
-.toggle .line1{
-  transform: rotate(-45deg) translate(-5px,4px);
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 4px);
 }
-.toggle .line2{
+.toggle .line2 {
   opacity: 0;
 }
-.toggle .line3{
-  transform: rotate(45deg) translate(-5px,-5px);
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -5px);
 }
 
-
-
-
-
-
-#hero{
+#hero {
   width: 100%;
   height: 92vh;
-  background-image: linear-gradient(90deg,rgb(255,183,49) 63%, rgb(40,45,41)37%);
-  margin-top: 8vh;  
+  background-image: linear-gradient(
+    90deg,
+    rgb(255, 183, 49) 63%,
+    rgb(40, 45, 41) 37%
+  );
+  margin-top: 8vh;
 }
 
-#hero .container img{
-  height:90%;
+#hero .container img {
+  height: 90%;
   width: 30vw;
   position: relative;
-  
-  
-  
 }
 
-.
-
-
-#hero .container{
+. #hero .container {
   display: flex;
   align-items: center;
 }
-#main{
+#main {
   display: flex;
   align-content: center;
   align-items: center;
+}
+
+/*about me section*/
+
+#about-me .container {
+  height: 60%;
+  width: 80%;
+  border: 2px solid black;
+  border-radius: 5px;
+  background-color: blue;
 }
