--- a/personalportfolio.css
+++ b/personalportfolio.css
@@ -16,7 +16,7 @@ nav {
   min-height: 8vh;
   background-color: rgb(49, 49, 49);
   font-family: "Poppins", sans-serif;
-  box-shadow: 10px 10px 10px black;
+  box-shadow: 10px 10px 10px rgb(26,17,16) ;
 }
 
 .logo {
@@ -134,11 +134,7 @@ nav {
 #hero {
   width: 100%;
   height: 92vh;
-  background-image: linear-gradient(
-    90deg,
-    rgb(255, 183, 49) 63%,
-    rgb(40, 45, 41) 37%
-  );
+  background-image: linear-gradient(90deg, rgb(255, 183, 49) 63%, rgb(40, 45, 41)37%);
   margin-top: 8vh;
 }
 
@@ -148,7 +144,7 @@ nav {
   position: relative;
 }
 
-. #hero .container {
+#hero .container {
   display: flex;
   align-items: center;
 }
@@ -161,9 +157,60 @@ nav {
 /*about me section*/
 
 #about-me .container {
-  height: 60%;
+  height: 50%;
   width: 80%;
   border: 2px solid black;
   border-radius: 5px;
+  
+}
+#about-me{
+  background-color: rgb(226, 226, 226);
+  padding: 5% 0;
+}
+
+.about-img{
+  background-color: rgb(40, 45, 41);
+}
+.about-data{
+  background-color: rgb(255, 183, 49);
+}
+
+@media screen and (max-width:576px){
+  #about-me .container{
+    
+    width: 96vw;
+    
+  }
+
+}
+
+/*   ====================================      SKILLS        =========================================          */
+
+
+
+
+
+
+
+/*  =======================================      CAROUSEL FOR THE BLOGS     =====================================   */
+
+
+
+
+.swiper-container {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
   background-color: blue;
+}
+.imgbx{
+  width: 300px;
+  height: 300px;
 }
