--- a/personalportfolio.css
+++ b/personalportfolio.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap");
 * {
   margin: 0px;
   padding: 0px;
@@ -16,7 +17,7 @@ nav {
   min-height: 8vh;
   background-color: rgb(49, 49, 49);
   font-family: "Poppins", sans-serif;
-  box-shadow: 10px 10px 10px rgb(26,17,16) ;
+  box-shadow: 10px 10px 10px rgb(26, 17, 16);
 }
 
 .logo {
@@ -134,7 +135,11 @@ nav {
 #hero {
   width: 100%;
   height: 92vh;
-  background-image: linear-gradient(90deg, rgb(255, 183, 49) 63%, rgb(40, 45, 41)37%);
+  background-image: linear-gradient(
+    90deg,
+    rgb(255, 183, 49) 63%,
+    rgb(40, 45, 41) 37%
+  );
   margin-top: 8vh;
 }
 
@@ -161,41 +166,56 @@ nav {
   width: 80%;
   border: 2px solid black;
   border-radius: 5px;
-  
 }
-#about-me{
+#about-me {
   background-color: rgb(226, 226, 226);
   padding: 5% 0;
 }
 
-.about-img{
+.about-img {
   background-color: rgb(40, 45, 41);
 }
-.about-data{
+.about-data {
   background-color: rgb(255, 183, 49);
 }
 
-@media screen and (max-width:576px){
-  #about-me .container{
-    
+@media screen and (max-width: 576px) {
+  #about-me .container {
     width: 96vw;
-    
   }
+}
+#abt-content h3 ::before {
+  text-align: center;
+  padding: 5% 0;
+  font-weight: bolder;
+}
+#abt-content p {
+  font-family: "Roboto Slab", serif;
+  word-spacing: 5px;
+  line-height: 200%;
+}
+#info p {
+  font-family: "Poppins", sans-serif;
+}
+#info hr {
+  background-color: rgb(105, 105, 105);
+  width: 100%;
+}
+#info button {
+  text-align: center;
 
+  border: 2px solid rgb(40, 45, 41);
+  font-weight: bold;
+  background-color: rgb(226, 226, 226);
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 /*   ====================================      SKILLS        =========================================          */
 
-
-
-
-
-
-
 /*  =======================================      CAROUSEL FOR THE BLOGS     =====================================   */
-
-
-
 
 .swiper-container {
   width: 100%;
@@ -207,10 +227,46 @@ nav {
   background-position: center;
   background-size: cover;
   width: 300px;
-  height: 300px;
-  background-color: blue;
+  height: 400px;
+  background-color: rgb(255, 183, 49);
 }
-.imgbx{
+.imgbx {
   width: 300px;
   height: 300px;
+}
+#blogs {
+  height: 100vh;
+}
+
+.details button {
+  text-align: center;
+
+  border: 2px solid rgb(40, 45, 41);
+  font-weight: bold;
+  background-color: rgb(226, 226, 226);
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+/*micro interaction*/
+.wrapper {
+  position: relative;
+  height: 56px;
+  width: 150px;
+}
+.wrapper:hover .button-center {
+  transform: translate(0, -10px);
+}
+.shadow {
+  position: absolute;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.2);
+}
+.button-center {
+  position: relative;
+  z-index: 2;
+  transition: transform 0.35s;
 }
