--- a/personalportfolio.css
+++ b/personalportfolio.css
@@ -184,7 +184,7 @@ nav {
     width: 96vw;
   }
 }
-#abt-content h3 ::before {
+#abt-content h3{
   text-align: center;
   padding: 5% 0;
   font-weight: bolder;
@@ -229,7 +229,7 @@ nav {
   background-size: cover;
   width: 300px;
   height: 400px;
-  background-color:rgb(255, 183, 49);;
+  background-color:rgb(255, 183, 49);
 }
 .carde{
   background-position: center;
@@ -248,7 +248,7 @@ nav {
 }
 #blogs {
   height: 67vh;
-  background-color: rgb(226, 226, 226);
+  background-image: linear-gradient(45deg,rgba(255, 183, 49,0), rgba(255, 183, 49,1));
 }
 
 .details-o{
@@ -372,7 +372,7 @@ nav {
 }
 
 .portfolio #portfolio-flters li:last-child {
-  margit: 0;
+  margin: 0;
 }
 
 .portfolio .portfolio-wrap {
