--- a/personalportfolio.css
+++ b/personalportfolio.css
@@ -214,35 +214,48 @@ nav {
 }
 
 /*   ====================================      SKILLS        =========================================          */
-.part-1 {
+
+.passion {
   background-color: rgb(255, 183, 49);
-  height: 45vh;
+  height: 40vh;
+  width: 33%;
+  text-align: center;
 }
-.part-2 {
+.skills {
   background-color: rgb(40, 45, 41);
   color: rgb(226, 226, 226);
-  height: 45vh;
+  height: 40vh;
+  width: 33%;
+  text-align: center;
 }
-.items {
+.language {
+  background-color: rgb(255, 183, 49);
+  height: 40vh;
+  width: 33%;
+}
+/*.items {
   position: relative;
   left: 40%;
   font-size: 1.5rem;
 }
-#skills h3 {
-  text-align: center;
-}
-#outer-skills {
+
+*/
+#inner-skills .container {
   display: flex;
   align-items: center;
   justify-content: center;
-
-  height: 30vh;
+  flex-wrap: wrap;
+  height: 50vh;
+  background-color: rgb(226, 226, 226);
 }
-#skills .container .row {
+/*#outer-skills {
+  background-color: rgb(226, 226, 226);
+}
+/*#skills .container .row {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
+}*/
 
 /*  =======================================      CAROUSEL FOR THE BLOGS     =====================================   */
 
